[gd_scene load_steps=69 format=3 uid="uid://bbta0bh5b5lws"]

[ext_resource type="Texture2D" uid="uid://dehhtdsv0tnsp" path="res://assets/purchased/candylandUI/menu - Large H.png" id="1_6ds4i"]
[ext_resource type="Script" uid="uid://k31my64x84ss" path="res://scripts/cutscene_1.gd" id="1_wname"]
[ext_resource type="FontFile" uid="uid://b8yelg2v8pmdj" path="res://assets/fonts/editundo.ttf" id="2_5yu3y"]
[ext_resource type="Texture2D" uid="uid://brbdm34jqan45" path="res://assets/fudge/fudge_plain.png" id="3_wname"]
[ext_resource type="Texture2D" uid="uid://dsv46crlw5hhy" path="res://assets/purchased/candylandUI/arrow - left.png" id="4_2etud"]
[ext_resource type="Texture2D" uid="uid://c4abslkgkdrye" path="res://assets/purchased/candylandUI/arrow - right.png" id="5_kteqr"]
[ext_resource type="Texture2D" uid="uid://c6c48l1dipo2q" path="res://assets/purchased/fox/FoxAttack.png" id="7_mfxas"]
[ext_resource type="Texture2D" uid="uid://w78o50dsnoux" path="res://assets/purchased/fox/FoxDie.png" id="8_hd4lr"]
[ext_resource type="Texture2D" uid="uid://d0nk8vafet4u3" path="res://assets/purchased/fox/FoxHurt.png" id="9_8ubkd"]
[ext_resource type="Texture2D" uid="uid://mtgfet75iwsw" path="res://assets/purchased/fox/FoxIdle.png" id="10_ud2vv"]
[ext_resource type="Texture2D" uid="uid://dk6xpj5imr4ll" path="res://assets/purchased/fox/FoxJump.png" id="11_simcy"]
[ext_resource type="Texture2D" uid="uid://cj1nuya0ha3en" path="res://assets/purchased/fox/FoxSitting.png" id="12_t2gc3"]
[ext_resource type="Texture2D" uid="uid://jewbqh81ior" path="res://assets/purchased/fox/FoxSleep.png" id="13_74sw1"]
[ext_resource type="Texture2D" uid="uid://cfal6uhcrxfiv" path="res://assets/purchased/fox/FoxWalking.png" id="14_gr8l6"]

[sub_resource type="Animation" id="Animation_c00ax"]
resource_name = "typing_text"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_r7su1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("fudge:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c6be6"]
_data = {
&"RESET": SubResource("Animation_r7su1"),
&"typing_text": SubResource("Animation_c00ax")
}

[sub_resource type="Animation" id="Animation_c6be6"]
resource_name = "fudgeSpin"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fudge:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 10, 10.01, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 6.2831855, 0.0, 6.2831855]
}

[sub_resource type="Animation" id="Animation_i2hxp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fudge:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2n4j6"]
_data = {
&"RESET": SubResource("Animation_i2hxp"),
&"fudgeSpin": SubResource("Animation_c6be6")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ufccv"]
atlas = ExtResource("7_mfxas")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35nom"]
atlas = ExtResource("7_mfxas")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u0el"]
atlas = ExtResource("7_mfxas")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_brrv0"]
atlas = ExtResource("7_mfxas")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g4xt"]
atlas = ExtResource("7_mfxas")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5q2l"]
atlas = ExtResource("7_mfxas")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ael4"]
atlas = ExtResource("7_mfxas")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8a3a"]
atlas = ExtResource("7_mfxas")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgc2x"]
atlas = ExtResource("8_hd4lr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tk3r"]
atlas = ExtResource("8_hd4lr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n1d8"]
atlas = ExtResource("8_hd4lr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_niw3u"]
atlas = ExtResource("8_hd4lr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7elu"]
atlas = ExtResource("8_hd4lr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0vgo"]
atlas = ExtResource("9_8ubkd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u77t"]
atlas = ExtResource("9_8ubkd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7fst"]
atlas = ExtResource("9_8ubkd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiwdv"]
atlas = ExtResource("9_8ubkd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6fhu"]
atlas = ExtResource("9_8ubkd")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnd4m"]
atlas = ExtResource("9_8ubkd")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbqu4"]
atlas = ExtResource("9_8ubkd")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeech"]
atlas = ExtResource("10_ud2vv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lftlf"]
atlas = ExtResource("10_ud2vv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qevgp"]
atlas = ExtResource("10_ud2vv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gth13"]
atlas = ExtResource("10_ud2vv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dccq"]
atlas = ExtResource("11_simcy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdtt3"]
atlas = ExtResource("11_simcy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkl42"]
atlas = ExtResource("11_simcy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oq3m"]
atlas = ExtResource("11_simcy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_142xi"]
atlas = ExtResource("11_simcy")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bgwt"]
atlas = ExtResource("11_simcy")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_htlra"]
atlas = ExtResource("11_simcy")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2ep8"]
atlas = ExtResource("11_simcy")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aytgj"]
atlas = ExtResource("11_simcy")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibknw"]
atlas = ExtResource("11_simcy")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppn1o"]
atlas = ExtResource("12_t2gc3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tf0p8"]
atlas = ExtResource("12_t2gc3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8c35"]
atlas = ExtResource("13_74sw1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1peiq"]
atlas = ExtResource("13_74sw1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv42t"]
atlas = ExtResource("13_74sw1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3q65"]
atlas = ExtResource("13_74sw1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx048"]
atlas = ExtResource("14_gr8l6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8do5k"]
atlas = ExtResource("14_gr8l6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8he5"]
atlas = ExtResource("14_gr8l6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrolr"]
atlas = ExtResource("14_gr8l6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_eswro"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufccv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35nom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u0el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brrv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g4xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5q2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ael4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8a3a")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgc2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tk3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n1d8")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_niw3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7elu")
}],
"loop": true,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0vgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u77t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7fst")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_aiwdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6fhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnd4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbqu4")
}],
"loop": false,
"name": &"hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeech")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lftlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qevgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gth13")
}],
"loop": false,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dccq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdtt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkl42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oq3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_142xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bgwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htlra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2ep8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aytgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibknw")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppn1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tf0p8")
}],
"loop": true,
"name": &"sitting",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8c35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1peiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv42t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3q65")
}],
"loop": false,
"name": &"sleep",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx048")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8do5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8he5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrolr")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_mfxas"]
resource_name = "foxWalk"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fox:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [&"walk", &"sitting", &"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fox:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 10, 13),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 3, 0, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 10, 13),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-28, 152), Vector2(130, 152), Vector2(130, 152), Vector2(341, 152)]
}

[sub_resource type="Animation" id="Animation_hd4lr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fox:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fox:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(130, 152)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hd4lr"]
_data = {
&"RESET": SubResource("Animation_hd4lr"),
&"foxWalk": SubResource("Animation_mfxas")
}

[node name="cutscene1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wname")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6ds4i")
expand_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 43.0
offset_top = 29.0
offset_right = -39.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.5176471, 0.29803923, 0.1764706, 1)
theme_override_fonts/normal_font = ExtResource("2_5yu3y")
text = "This is Fudgy
He likes fudge
He needs your help to get the fudge"
horizontal_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="TextAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c6be6")
}

[node name="fudge" type="Sprite2D" parent="."]
position = Vector2(159, 130)
scale = Vector2(0.11887271, 0.11887272)
texture = ExtResource("3_wname")

[node name="FudgeAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2n4j6")
}

[node name="Back_Button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -9.0
offset_right = -121.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_2etud")
stretch_mode = 5

[node name="Forward_Button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 125.0
offset_top = -9.0
offset_right = 140.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_kteqr")
stretch_mode = 5

[node name="Fox" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(130, 152)
sprite_frames = SubResource("SpriteFrames_eswro")
animation = &"walk"

[node name="FoxAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hd4lr")
}

[connection signal="pressed" from="Back_Button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Forward_Button" to="." method="_on_forward_button_pressed"]
